[project]
name = "code-review-env"
version = "0.1.0"
description = "OpenEnv code review environment"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"